# bevy_ui_first_editor

./: .gitignore  CLAUDE.md  Cargo.toml  DOCKING_ISSUE.md  PROGRESS.md  README.md  ROADMAP.md  test_picking.rs
.cargo/: config.toml
.claude/: settings.local.json
crates/bevy_editor_assets/: Cargo.toml
crates/bevy_editor_assets/src/: browser.rs  lib.rs  thumbnails.rs  watcher.rs
crates/bevy_editor_core/: Cargo.toml
crates/bevy_editor_core/src/: editor_state.rs  lib.rs  selection.rs
crates/bevy_editor_hierarchy/: Cargo.toml
crates/bevy_editor_hierarchy/src/: lib.rs  operations.rs  tree_view.rs
crates/bevy_editor_inspector/: Cargo.toml
crates/bevy_editor_inspector/src/: component_list.rs  lib.rs  property_editors.rs
crates/bevy_editor_project/: Cargo.toml
crates/bevy_editor_project/src/: lib.rs  project.rs  scene_format.rs
crates/bevy_editor_ui/: Cargo.toml
crates/bevy_editor_ui/src/: components.rs  docking.rs  icons.rs  layout.rs  lib.rs  panel.rs  scroll.rs  widgets.rs
crates/bevy_editor_ui/src/docking/: drop_zones.rs  mod.rs  panels.rs  persistence.rs  renderer.rs  systems.rs
crates/bevy_editor_ui/src/hierarchy/: context_menu.rs  interactions.rs  keyboard_nav.rs  mod.rs  panel.rs  search.rs  visibility.rs
crates/bevy_editor_ui/src/inspector/: mod.rs  panel.rs  sprite_editor.rs  transform_editor.rs
crates/bevy_editor_undo/: Cargo.toml
crates/bevy_editor_undo/src/: commands.rs  lib.rs
crates/bevy_editor_viewport/: Cargo.toml
crates/bevy_editor_viewport/src/: camera.rs  gizmos.rs  grid.rs  lib.rs  picking.rs
editor_app/: Cargo.toml
editor_app/assets/: README.md
editor_app/src/: main.rs
