[package]
name = "bevy_editor_project"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_editor_core = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
